<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Top Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="36dp"
        app:title="Profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/profile_email_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profileUidLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/profile_uid_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileUidText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signOutButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="36dp"
            android:text="@string/sign_out" />

    </LinearLayout>

</LinearLayout>
